<resources>
    <string name="app_name">Alerter</string>
    <string name="title_activity_example">Alerter Demo</string>
    <string name="default_alert">Default Alert</string>
    <string name="default_alert_with_elevation">Default Alert With Elevation</string>
    <string name="coloured_alert">Coloured Alert</string>
    <string name="text_only_alert">Text Only Alert</string>
    <string name="on_click_alert">On Click Alert</string>
    <string name="verbose_alert">Verbose Alert</string>
    <string name="custom_icon_alert">Custom Icon Alert</string>
    <string name="callback_alert">Alert Callbacks</string>
    <string name="infinite_alert">Infinity Duration Alert</string>
    <string name="progress_alert">Progress Alert</string>
    <string name="custom_font">Custom Font</string>
    <string name="custom_color">Custom Color</string>
    <string name="swipe_to_dismiss">Swipe To Dismiss Alert</string>
    <string name="custom_enter_exit_animations">Custom Enter/Exit Animations</string>
    <string name="with_buttons">With Buttons</string>
    <string name="sound_alert">Alert Sound</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://apps.tapadoo.com\",\n  }\n}]</string>
    <string name="with_custom_layout">With Custom Layout</string>
    <string name="default_bottom_alert">Default Bottom Alert</string>
    <string name="default_center_alert">Default Center Alert</string>
    <string name="with_right_icon">With Right Icon</string>
    <string name="with_only_right_icon">With Only Right Icon</string>
    <string name="right_icon_on_top">Right icon on top</string>

    <string name="btn_modal">Modal Bottom Sheet</string>
</resources>
