<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAlertDefault"
        style="@style/ExampleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_alert"
        android:textColor="@android:color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAlertColoured"
        style="@style/ExampleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coloured_alert" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAlertCustomIcon"
        style="@style/ExampleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_icon_alert" />

</LinearLayout>